--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/murilo.jpg" alt="Foto do Murilo">
+        <img class="apresentacao__imagem" src="./assets/muri foto 2.jpeg" alt="Foto do Murilo">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Murilo Miguel.</p>
