--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Me conheça!</h1>
             <p class="apresentacao__conteudo__texto">
-                Programador especializado em HTML e CSS. Com vasta experiência na criação de sites funcionais e atraentes, tenho conhecimento atualizado sobre as melhores práticas de desenvolvimento web. Apaixonado por resolver problemas e possui habilidades de comunicação eficazes. Também tenho conhecimentos básicos em JavaScript e está familiarizado com frameworks como Bootstrap.Estou pronto para colaborar em projetos desafiadores e contribuir para o sucesso do seu projeto web.</p>
+                Programador especializado em HTML e CSS. Com vasta experiência na criação de sites funcionais e atraentes, tenho conhecimento atualizado sobre as melhores práticas de desenvolvimento web. Apaixonado por resolver problemas e possuo habilidades de comunicação eficazes. Também tenho conhecimentos básicos em JavaScript e está familiarizado com frameworks como Bootstrap.Estou pronto para colaborar em projetos desafiadores e contribuir para o sucesso do seu projeto web.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/Murilo_sobre.jpg" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/muri foto.jpeg" alt="Foto da Joana Santos programando">
     </main>
 
     <footer class="rodape">
